<resources>
    <string name="app_name">AdHoc Labs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="office_address">Office Address</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="enquiry">Enquiry</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_contact_number">Enter your Contact Number</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="enter_your_college_name">Enter your College Name</string>
    <string name="college_name">College Name</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="author">Author</string>
    <string name="about_us">About Us</string>
    <string name="course_image">Course Image</string>
    <string name="title">title</string>
    <string name="training_image">Training Image</string>
    <string name="adhoc_labs_training">Adhoc Labs Training</string>
    <string name="service_image">Service Image</string>
    <string name="go">Go</string>
    <string name="image_adhoc">Image Adhoc</string>
    <string name="adhoc_labs">AdHoc Labs</string>
    <string name="adhoclabs_io">adhoclabs.io</string>
    <string name="dashboard">Dashboard</string>
    <string name="trainings">Trainings</string>
    <string name="contact_us">Contact Us</string>
</resources>
